Added small changes to the candidates accordion

--- a/VoterGuide/index.html
+++ b/VoterGuide/index.html
@@ -57,7 +57,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-    $(".candidate_county_commission_item").hide();
+    $(".candidate_county_commission_item");
     $(".candidate_county_commission tr:first-child").show();
     $(".candidate_table tr.candidate_county_commission").click(function(){
     $(this).nextAll("tr.candidate_county_commission_item").fadeToggle("fast");
@@ -566,7 +566,7 @@ $(document).ready(function() {
 								<tr class="candidate_county_commission">
 									<td class="position" data-sheets-value="[null,2,&quot;County Commission&quot;]"><img src="http://www.capell.es/imgs/arrow_down.png"></img> <strong>County
 											Commission</strong></td>
-									<td></td>
+									<td class="position"></td>
 								</tr>
 								<tr class="candidate_county_commission_item">
 									<td data-sheets-value="[null,2,&quot;Joe Bryan&quot;]"><a
@@ -579,7 +579,7 @@ $(document).ready(function() {
 								<tr class="candidate_wake_da">
 									<td class="position" data-sheets-value="[null,2,&quot;Wake DA &quot;]"><img src="http://www.capell.es/imgs/arrow_down.png"></img><strong>Wake
 											DA</strong></td>
-									<td>&nbsp</td>
+									<td class="position"></td>
 								</tr>
 								<tr class="candidate_wake_da_item">
 									<td
@@ -611,7 +611,7 @@ $(document).ready(function() {
 								<tr class="candidate_clerk_of_court">
 									<td	class="position" data-sheets-value="[null,2,&quot;Clerk of Superior Court&quot;]"><img src="http://www.capell.es/imgs/arrow_down.png"></img><strong>Clerk
 											of Court</strong></td>
-									<td>&nbsp</td>
+									<td class="position"></td>
 								</tr>
 								<tr class="candidate_clerk_of_court_item">
 									<td data-sheets-value="[null,2,&quot;Blair Williams&quot;]"><a
@@ -638,7 +638,7 @@ $(document).ready(function() {
 								<tr class="candidate_nc_senate_15">
 									<td class="position" data-sheets-value="[null,2,&quot;NC Senate 15&quot;]"><img src="http://www.capell.es/imgs/arrow_down.png"></img><strong>NC
 											Senate 15</strong></td>
-									<td>&nbsp</td>
+									<td class="position"></td>
 								</tr>
 								<tr class="candidate_nc_senate_15_item">
 									<td data-sheets-value="[null,2,&quot;Apryl Major&quot;]"><a
@@ -651,7 +651,7 @@ $(document).ready(function() {
 								<tr class="candidate_nc_house_49">
 									<td class="position" data-sheets-value="[null,2,&quot;NC House 49&quot;]"><img src="http://www.capell.es/imgs/arrow_down.png"></img><strong>NC
 											House 49</strong></td>
-									<td>&nbsp</td>
+									<td class="position"></td>
 								</tr>
 								<tr class="candidate_nc_house_49_item">
 									<td data-sheets-value="[null,2,&quot;Kim Hanchette&quot;]"><a
